target_sources(
  behavior_modules
  PRIVATE
    "BehaviorControl/BehaviorControl.cpp"
    "BehaviorControl/BehaviorControl.h"
    "BehaviorControl/Cabsl.h"
    "BehaviorControl/CameraControlEngine/CameraControlEngine.cpp"
    "BehaviorControl/CameraControlEngine/CameraControlEngine.h"
    "BehaviorControl/LEDHandler/LEDHandler.cpp"
    "BehaviorControl/LEDHandler/LEDHandler.h"
    "BehaviorControl/Libraries.cpp"
    "BehaviorControl/Libraries.h"
    "BehaviorControl/Libraries/LibCodeRelease.cpp"
    "BehaviorControl/Libraries/LibCodeRelease.h"
    "BehaviorControl/Libraries/LibLost.cpp"
    "BehaviorControl/Libraries/LibLost.h"
    "BehaviorControl/Libraries/LibWorldModel.cpp"
    "BehaviorControl/Libraries/LibWorldModel.h"
    "BehaviorControl/LibraryBase.cpp"
    "BehaviorControl/LibraryBase.h"
    "BehaviorControl/ManualHeadMotionProvider/ManualHeadMotionProvider.cpp"
    "BehaviorControl/ManualHeadMotionProvider/ManualHeadMotionProvider.h"
    "BehaviorControl/Options/Functions/Geometric.h"
    "BehaviorControl/Options/Functions/RoleAssignement.h"
    "BehaviorControl/Options/Functions/ShootOut.h"
    "BehaviorControl/Options/GameControl/HandleGameState.h"
    "BehaviorControl/Options/GameControl/HandlePenaltyState.h"
    "BehaviorControl/Options/GameControl/PlayingState.h"
    "BehaviorControl/Options/GameControl/ReadyState.h"
    "BehaviorControl/Options.h"
    "BehaviorControl/Options/HeadControl/HeadControl.h"
    "BehaviorControl/Options/HeadControl/LookAndLocate.h"
    "BehaviorControl/Options/HeadControl/LookAtBall.h"
    "BehaviorControl/Options/HeadControl/LookAtTarget.h"
    "BehaviorControl/Options/HeadControl/LookBallGoal.h"
    "BehaviorControl/Options/HeadControl/LookDown.h"
    "BehaviorControl/Options/HeadControl/LookForFeatures.h"
    "BehaviorControl/Options/HeadControl/LookForward.h"
    "BehaviorControl/Options/HeadControl/LookForwardZeroTilt.h"
    "BehaviorControl/Options/HeadControl/LookHalfDown.h"
    "BehaviorControl/Options/HeadControl/LookLeftZeroTilt.h"
    "BehaviorControl/Options/HeadControl/LookRightZeroTilt.h"
    "BehaviorControl/Options/HeadControl/ReadyAndLocate.h"
    "BehaviorControl/Options/HeadControl/ScanLeftRight.h"
    "BehaviorControl/Options/HeadControl/ScanLeftRightKeeper.h"
    "BehaviorControl/Options/HeadControl/WalkScan.h"
    "BehaviorControl/Options/OneVsOne/OneVsOneGame.h"
    "BehaviorControl/Options/OneVsOne/OneVsOnePlay.h"
    "BehaviorControl/Options/OneVsOne/OneVsOneWait.h"
    "BehaviorControl/Options/Output/ArmMotionRequest/Arm.h"
    "BehaviorControl/Options/Output/HeadMotionRequest/SetHeadPanTilt.h"
    "BehaviorControl/Options/Output/HeadMotionRequest/SetHeadTarget.h"
    "BehaviorControl/Options/Output/HeadMotionRequest/SetHeadTargetOnGround.h"
    "BehaviorControl/Options/Output/MotionRequest/DribblingParameters.h"
    "BehaviorControl/Options/Output/MotionRequest/InWalkKick.h"
    "BehaviorControl/Options/Output/MotionRequest/SpecialAction.h"
    "BehaviorControl/Options/Output/MotionRequest/Stand.h"
    "BehaviorControl/Options/Output/MotionRequest/StandWide.h"
    "BehaviorControl/Options/Output/MotionRequest/StandHigh.h"
    "BehaviorControl/Options/Output/MotionRequest/WalkAtSpeed.h"
    "BehaviorControl/Options/Output/MotionRequest/WalkAtSpeedPercentage.h"
    "BehaviorControl/Options/Output/MotionRequest/WalkToTarget.h"
    "BehaviorControl/Options/Output/PlaySound.h"
    "BehaviorControl/Options/Roles/Defender/DefenderFreeKick.h"
    "BehaviorControl/Options/Roles/Defender/Defender.h"
    "BehaviorControl/Options/Roles/Defender/DefenderPlay.h"
    "BehaviorControl/Options/Roles/Defender/DefenderPosition.h"
    "BehaviorControl/Options/Roles/Defender/DefenderSearch.h"
    "BehaviorControl/Options/Roles/goToBallAndKick.h"
    "BehaviorControl/Options/Roles/Keeper/KeeperFreeKick.h"
    "BehaviorControl/Options/Roles/Keeper/KeeperSearch.h"
    "BehaviorControl/Options/Roles/Keeper/Keeper.h"
    "BehaviorControl/Options/Roles/PenaltyKeeper.h"
    "BehaviorControl/Options/Roles/PenaltyStriker.h"
    "BehaviorControl/Options/Roles/Striker/Striker.h"
    "BehaviorControl/Options/Roles/Striker/StrikerSearch.h"
    "BehaviorControl/Options/Roles/Supporter/Supporter.h"
    "BehaviorControl/Options/Roles/Supporter/SupporterSearch.h"
    "BehaviorControl/Options/Roles/Supporter/SupporterCoop.h"
    "BehaviorControl/Options/Roles/TestRole.h"
    "BehaviorControl/Options/Skills/DistancePass.h"
    "BehaviorControl/Options/SkillSets/DribbleTo.h"
    "BehaviorControl/Options/SkillSets/GetBehindBall.h"
    "BehaviorControl/Options/SkillSets/OmniGetBehindBall.h"
    "BehaviorControl/Options/SkillSets/KickTo.h"
    "BehaviorControl/Options/SkillSets/OmniKickTo.h"
    "BehaviorControl/Options/SkillSets/PassTo.h"
    "BehaviorControl/Options/SkillSets/Relocate.h"
    "BehaviorControl/Options/SkillSets/ScanRotate.h"
    "BehaviorControl/Options/SkillSets/ScoreGoal.h"
    "BehaviorControl/Options/SkillSets/TravelTo.h"
    "BehaviorControl/Options/SkillSets/CircleAroundBall.h"
    "BehaviorControl/Options/SkillSets/RelocateWhileProtectBall.h"
    "BehaviorControl/Options/SkillSets/RelocateWhileSearchingBall.h"
    "BehaviorControl/Options/SkillSets/SearchAndRelocate.h"
    "BehaviorControl/Options/SkillSets/WalkAndClear.h"
    "BehaviorControl/Options/SkillSets/WalkAndKick.h"
    "BehaviorControl/Options/SkillSets/WalkDribbleKick.h"
    "BehaviorControl/Options/SkillSets/WalkTo.h"
    "BehaviorControl/Options/SkillSets/WalkTurnReady.h"
    "BehaviorControl/Options/Skills/PassKick.h"
    "BehaviorControl/Options/Skills/PowerKick.h"
    "BehaviorControl/Options/Skills/OmniKick.h"
    "BehaviorControl/Options/Skills/GetUp.h"
    "BehaviorControl/Options/Soccer.h"
    "BehaviorControl/Options/Strategies/OffensiveFreeKick.h"
    "BehaviorControl/Options/Strategies/OffensivePlay.h"
    "BehaviorControl/Options/Tools/ButtonPressedAndReleased.h"
    "BehaviorControl/Options/TwoVsTwo/Defender2v2.h"
    "BehaviorControl/Options/TwoVsTwo/DefensivePlay2v2.h"
    "BehaviorControl/Options/TwoVsTwo/KickTo2v2.h"
    "BehaviorControl/Options/TwoVsTwo/OffensivePlay2v2.h"
    "BehaviorControl/Options/TwoVsTwo/ScoreGoal2v2.h"
    "BehaviorControl/Options/TwoVsTwo/Striker2v2.h"
    "BehaviorControl/Options/VisualReferee/VisualRefereeChallenge.h"
    "BehaviorControl/Options/VisualReferee/VisualRefereeReact.h")

target_precompile_headers(behavior_modules REUSE_FROM representations)

target_sources(
  modules
  PRIVATE
    "Configuration/CameraCalibratorV4.cpp"
    "Configuration/CameraCalibratorV4.h"
    "Configuration/CameraSettingsRandomizer.cpp"
    "Configuration/CameraSettingsRandomizer.h"
    "Configuration/CognitionConfigurationDataProvider.cpp"
    "Configuration/CognitionConfigurationDataProvider.h"
    "Configuration/FrictionLearner.cpp"
    "Configuration/FrictionLearner.h"
    "Configuration/JointCalibrator.cpp"
    "Configuration/JointCalibrator.h"
    "Configuration/MotionConfigurationDataProvider.cpp"
    "Configuration/MotionConfigurationDataProvider.h"
    "Infrastructure/AudioAcquisitionProvider.cpp"
    "Infrastructure/AudioAcquisitionProvider.h"
    "Infrastructure/AudioProvider.cpp"
    "Infrastructure/AudioProvider.h"
    "Infrastructure/CameraProvider.cpp"
    "Infrastructure/CameraProvider.h"
    "Infrastructure/CognitionLogDataProvider.cpp"
    "Infrastructure/CognitionLogDataProvider.h"
    "Infrastructure/FakeCamera.cpp"
    "Infrastructure/FakeCamera.h"
    "Infrastructure/GameInfoProvider.cpp"
    "Infrastructure/GameInfoProvider.h"
    "Infrastructure/InertiaSensorProvider.cpp"
    "Infrastructure/InertiaSensorProvider.h"
    "Infrastructure/LogDataProvider.h"
    "Infrastructure/MotionLogDataProvider.cpp"
    "Infrastructure/MotionLogDataProvider.h"
    "Infrastructure/MotionRobotHealthProvider.cpp"
    "Infrastructure/MotionRobotHealthProvider.h"
    "Infrastructure/NaoProvider.cpp"
    "Infrastructure/NaoProvider.h"
    "Infrastructure/RobotHealthProvider.cpp"
    "Infrastructure/RobotHealthProvider.h"
    "Infrastructure/TeamDataProvider.cpp"
    "Infrastructure/TeamDataProvider.h"
    "Infrastructure/TeamDataSender.cpp"
    "Infrastructure/TeamDataSender.h"
    "Infrastructure/ThumbnailProvider.cpp"
    "Infrastructure/ThumbnailProvider.h"
    "Modeling/BallLocator/BallLocator.cpp"
    "Modeling/BallLocator/BallLocator.h"
    "Modeling/CombinedWorldModelProvider/Ally.h"
    "Modeling/CombinedWorldModelProvider/CombinedWorldModelProvider.cpp"
    "Modeling/CombinedWorldModelProvider/CombinedWorldModelProvider.h"
    "Modeling/CombinedWorldModelProvider/Detection.h"
    "Modeling/CombinedWorldModelProvider/ExtendedBallModel.h"
    "Modeling/CombinedWorldModelProvider/TrackedRobot.h"
    "Modeling/FieldCoverageProvider/FieldCoverageProvider.cpp"
    "Modeling/FieldCoverageProvider/FieldCoverageProvider.h"
    "Modeling/GroundTruthProvider/GroundTruthProvider.cpp"
    "Modeling/GroundTruthProvider/GroundTruthProvider.h"
    "Modeling/OdometerProvider/OdometerProvider.cpp"
    "Modeling/OdometerProvider/OdometerProvider.h"
    "Modeling/OwnSideModelProvider/OwnSideModelProvider.cpp"
    "Modeling/OwnSideModelProvider/OwnSideModelProvider.h"
    "Modeling/PassHelperProvider/DrawingOptions.h"
    "Modeling/PassHelperProvider/LegendOptions.h"
    "Modeling/PassHelperProvider/PassHelperProvider.cpp"
    "Modeling/PassHelperProvider/PassHelperProvider.h"
    "Modeling/PassHelperProvider/PassHelperProviderParameters.h"
    "Modeling/PassHelperProvider/PassTypeDef.h"
    "Modeling/PassHelperProvider/PassTypes.h"
    "Modeling/PassHelperProvider/PointsField.cpp"
    "Modeling/PassHelperProvider/PointsField.h"
    "Modeling/PlayerLocator/PlayerLocator.cpp"
    "Modeling/PlayerLocator/PlayerLocator.h"
    "Modeling/Predictor.cpp"
    "Modeling/Predictor.h"
    "Modeling/SelfLocator/LineLocator.cpp"
    "Modeling/SelfLocator/LineLocator.h"
    "Modeling/SelfLocator/SelfLocator.cpp"
    "Modeling/SelfLocator/SelfLocator.h"
    "Modeling/SideConfidenceProvider/TemporarySideConfidenceProvider.cpp"
    "Modeling/SideConfidenceProvider/TemporarySideConfidenceProvider.h"
    "Modeling/TargetedCoordinatedPassing/CoordinatedPassParameters.h"
    "Modeling/TargetedCoordinatedPassing/CoordinatedPassProvider.cpp"
    "Modeling/TargetedCoordinatedPassing/CoordinatedPassProvider.h"
    "MotionControl/ArmMotionEngine.cpp"
    "MotionControl/ArmMotionEngine.h"
    "MotionControl/ArmMotion.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ArmAnimator.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ArmAnimator.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/AutoCalibrator.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/AutoCalibrator.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/CoMProvider.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/CoMProvider.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/CoMProviderModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/CoMProviderModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ConstantArmProvider.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ConstantArmProvider.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ControllerParams2012Provider.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ControllerParams2012Provider.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ControllerParamsNGProvider.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ControllerParamsNGProvider.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ControllerParamsProvider.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ControllerParamsProvider.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/CSConverter.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/CSConverter.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/CSConverterModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/CSConverterModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/FLIPMController.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/FLIPMController.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/FLIPMObserver.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/FLIPMObserver.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/GyroTiltController.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/GyroTiltController.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/IMUCoMProvider.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/IMUCoMProvider.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/LimbCombinator.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/LimbCombinator.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/OrientationArmAnimator.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/OrientationArmAnimator.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/PatternGenerator2016.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/PatternGenerator2016.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/PatternGenerator.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/PatternGenerator.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/PatternGeneratorModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/PatternGeneratorModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/RequestTranslator.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/RequestTranslator.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/RequestTranslatorModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/RequestTranslatorModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/RotationPoint.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/RotationPoint.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/spline.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/SwingLegController.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/SwingLegController.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/SwingLegControllerModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/SwingLegControllerModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/TiltController.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/TiltController.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/TiltControllerModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/TiltControllerModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPGenerator.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPGenerator.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPGeneratorModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPGeneratorModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPController2012.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPController2012.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPController2012Module.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPController2012Module.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPController.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPController.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPControllerModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPControllerModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPControllerNG.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPControllerNG.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPControllerNGModule.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPControllerNGModule.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPObserver2012.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPObserver2012.h"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPObserver2012Module.cpp"
    "MotionControl/WalkEngine/DortmundWalkingEngine/ZMPIPObserver2012Module.h"
    "MotionControl/HeadMotionEngine.cpp"
    "MotionControl/HeadMotionEngine.h"
    "MotionControl/JoystickController/JoystickController.cpp"
    "MotionControl/JoystickController/JoystickController.h"
    "MotionControl/JoystickController/XBoxButton.cpp"
    "MotionControl/JoystickController/XBoxButton.h"
    "MotionControl/JoystickController/XBoxJoystick.cpp"
    "MotionControl/JoystickController/XBoxJoystick.h"
    "MotionControl/KickEngine/KickEngine.cpp"
    "MotionControl/KickEngine/KickEngineData.cpp"
    "MotionControl/KickEngine/KickEngineData.h"
    "MotionControl/KickEngine/KickEngine.h"
    "MotionControl/KickEngine/KickEngineParameters.cpp"
    "MotionControl/KickEngine/KickEngineParameters.h"
    "MotionControl/MotionCombinator.cpp"
    "MotionControl/MotionCombinator.h"
    "MotionControl/MotionSelector.cpp"
    "MotionControl/MotionSelector.h"
    "MotionControl/NaoKinematic.cpp"
    "MotionControl/NaoKinematic.h"
    "MotionControl/WalkEngine/RunswiftWalkingEngine/Walk2014Generator.cpp"
    "MotionControl/WalkEngine/RunswiftWalkingEngine/Walk2014Generator.h"
    "MotionControl/WalkEngine/RunswiftWalkingEngine/Walk2014GeneratorLearner.cpp"
    "MotionControl/WalkEngine/RunswiftWalkingEngine/Walk2014GeneratorLearner.h"
    "MotionControl/WalkEngine/WalkingEngine.cpp"
    "MotionControl/WalkEngine/WalkingEngine.h"
    "MotionControl/WalkEngine/WalkingEngine22/StepPlanner.cpp"
    "MotionControl/WalkEngine/WalkingEngine22/StepPlanner.h"
    "MotionControl/WalkEngine/WalkingEngine22/Walk2022Generator.cpp"
    "MotionControl/WalkEngine/WalkingEngine22/Walk2022Generator.h"    
    "MotionControl/WalkEngine/WalkingEngine22/StepTrajectoryGenerator.h"
    "MotionControl/SpecialActions.cpp"
    "MotionControl/SpecialActions.h"
    "Perception/BodyContourProvider.cpp"
    "Perception/BodyContourProvider.h"
    "Perception/CameraMatrixProvider.cpp"
    "Perception/CameraMatrixProvider.h"
    "Perception/ColorProvider.cpp"
    "Perception/ColorProvider.h"
    "Perception/CoordinateSystemProvider.cpp"
    "Perception/CoordinateSystemProvider.h"
    "Perception/FieldBoundaryProvider.cpp"
    "Perception/FieldBoundaryProvider.h"
    "Perception/GoalPerceptor.cpp"
    "Perception/GoalPerceptor.h"
    "Perception/ImageAcquisitionProvider/ImageAcquisitionProvider.cpp"
    "Perception/ImageAcquisitionProvider/ImageAcquisitionProvider.h"
    "Perception/JoystickImageController.cpp"
    "Perception/JoystickImageController.h"
    "Perception/LineAnalyzer.cpp"
    "Perception/LineAnalyzer.h"
    "Perception/ObjectPerceptor/ObjectPerceptor.cpp"
    "Perception/ObjectPerceptor/ObjectPerceptor.h"
    "Perception/RandomForestsProvider.cpp"
    "Perception/RandomForestsProvider.h"
    "Perception/RobotCameraMatrixProvider.cpp"
    "Perception/RobotCameraMatrixProvider.h"
    "Perception/ShapePerceptor.cpp"
    "Perception/ShapePerceptor.h"
    "Sensing/ArmContactModelProvider.cpp"
    "Sensing/ArmContactModelProvider.h"
    "Sensing/ArmContactProvider.cpp"
    "Sensing/ArmContactProvider.h"
    "Sensing/CoMRCSProvider.cpp"
    "Sensing/CoMRCSProvider.h"
    "Sensing/CoPProvider.cpp"
    "Sensing/CoPProvider.h"
    "Sensing/FallDownStateDetector.cpp"
    "Sensing/FallDownStateDetector.h"
    "Sensing/FootContactModelProvider.cpp"
    "Sensing/FootContactModelProvider.h"
    "Sensing/FootSupportProvider/FootSupportProvider.cpp"
    "Sensing/FootSupportProvider/FootSupportProvider.h"
    "Sensing/FsrDataProvider.cpp"
    "Sensing/FsrDataProvider.h"
    "Sensing/FsrZmpProvider.cpp"
    "Sensing/FsrZmpProvider.h"
    "Sensing/GroundContactDetector.cpp"
    "Sensing/GroundContactDetector.h"
    "Sensing/InertiaSensorFilter.cpp"
    "Sensing/InertiaSensorFilter.h"
    "Sensing/JointFilter.cpp"
    "Sensing/JointFilter.h"
    "Sensing/RobotModelProvider.cpp"
    "Sensing/RobotModelProvider.h"
    "Sensing/SensorFilter.cpp"
    "Sensing/SensorFilter.h"
    "Sensing/TorsoMatrixProvider.cpp"
    "Sensing/TorsoMatrixProvider.h"
    "Sensing/USControl.cpp"
    "Sensing/USControl.h")

target_precompile_headers(modules REUSE_FROM representations)

if(ENABLE_TFLITE)
  target_sources(
    modules
    PRIVATE "Modeling/WhistleRecognizer/TfLiteWhistleRecognizer.cpp"
            "Modeling/WhistleRecognizer/TfLiteWhistleRecognizer.h"
            "Perception/DeepPlayerPerceptor/DeepPlayerPerceptor.cpp"
            "Perception/DeepPlayerPerceptor/DeepPlayerPerceptor.h"
            "Perception/TfLiteBallPerceptor/TfLiteBallPerceptor.cpp"
            "Perception/TfLiteBallPerceptor/TfLiteBallPerceptor.h"
            "Perception/TfLiteRefereePerceptor/TfLiteRefereePerceptor.cpp"
            "Perception/TfLiteRefereePerceptor/TfLiteRefereePerceptor.h")

  target_include_directories(modules PRIVATE ${UTIL_DIR})
endif()

if(NOMADZ_TARGET STREQUAL "host" OR NOMADZ_TARGET STREQUAL "host-only")
  target_compile_definitions(modules PRIVATE TARGET_SIM)
  target_compile_definitions(behavior_modules PRIVATE TARGET_SIM)
else()
  target_compile_definitions(modules PRIVATE TARGET_ROBOT)
  target_include_directories(modules PRIVATE ${SRC_DIR}/Apps/naobridge/include)
  target_compile_definitions(behavior_modules PRIVATE TARGET_ROBOT)
  target_include_directories(behavior_modules PRIVATE ${SRC_DIR}/Apps/naobridge/include)
endif()

if(NOMADZ_NG OR NOMADZ_TARGET STREQUAL "host" OR NOMADZ_TARGET STREQUAL "host-only")
  set_property(TARGET modules PROPERTY POSITION_INDEPENDENT_CODE ON)
  set_property(TARGET behavior_modules PROPERTY POSITION_INDEPENDENT_CODE ON)
endif()

target_include_directories(modules PUBLIC ${Eigen3_INCLUDE_DIRS} ${SRC_DIR})
target_include_directories(behavior_modules PUBLIC ${Eigen3_INCLUDE_DIRS} ${SRC_DIR})

target_link_libraries(
  modules
  PUBLIC core
         ${OpenCV_LIBS}
         mfcc
         ${CMAKE_DL_LIBS})
target_link_libraries(
  behavior_modules
  PUBLIC core
         ${OpenCV_LIBS}
         ${CMAKE_DL_LIBS})

if(ENABLE_TFLITE)
  target_link_libraries(modules PRIVATE tensorflow-lite)
endif()
